Add a <base> tag to load resources from the original site.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta content="Egg's Oracle Trainer" property="og:title">
         <meta content="Train your ear to recognize VOG oracles by sound" property="og:description">
         <meta content="Egg's Tools" property="og:site_name">
+        <base href="https://oracles.cabotmc.dev">
         <title>Oracle Trainer</title>
         <style>
             #soundHolder {
