--- a/index.html
+++ b/index.html
@@ -7,17 +7,14 @@
         <base href="https://oracles.cabotmc.dev">
         <title>Oracle Trainer</title>
         <style>
-            #soundHolder {
-                display: none;
-            }
             #background {
-                display: block;
-                min-width: 640px;
-                min-height: 480px;
-                position:absolute;
-                left: 100px;
-                top: 100px;
-                background-image: url('bg.png');
+                background: no-repeat url('bg.png');
+                background-size: contain;
+                height: 75vmin;
+                left: 0;
+                position: absolute;
+                top: 0;
+                width: 100vmin;
             }
             #background > button {
                 position: absolute;
@@ -30,77 +27,53 @@
             button {
                 color: black;
             }
-            #results > span {
-                font-size: 24px;
+            #L1 {
+                top: 68%;
+                left: 26%;
             }
-            [l1] {
-                top: 323px;
-                left: 161px;
+            #L2 {
+                top: 60%;
+                left: 20%;
             }
-            [l2] {
-                top: 287px;
-                left: 127px;
+            #L3 {
+                top: 26%;
+                left: 35%;
             }
-            [l3] {
-                top: 121px;
-                left: 219px
+            #M {
+                top: 65%;
+                left: 48.5%;
             }
-            [m] {
-                top: 307px;
-                left: 305px;
+            #R1 {
+                top: 61%;
+                left: 70%;
             }
-            [r1] {
-                top: 286px;
-                left: 444px;
+            #R2 {
+                top: 42%;
+                left: 77%;
             }
-            [r2] {
-                top: 200px;
-                left: 486px;
-            }
-            [r3] {
-                top: 132px;
-                left: 404px;
-            }
-            #results {
-                position:absolute;
-                left: 0px;
-                width: 100%;
-                text-align: center;
-                top: 70px;
+            #R3 {
+                top: 29%;
+                left: 63%;
             }
         </style>
     </head>
     <body>
-        
-        <div id="soundHolder">
-
-        </div>
         <div id="background">
-            <div id="results">
-
-            </div>
-            <button onclick="guess('L1')" l1>L1</button>
-            <button onclick="guess('L2')" l2>L2</button>
-            <button onclick="guess('L3')" l3>L3</button>
-            <button onclick="guess('M')"  m>M</button>
-            <button onclick="guess('R1')" r1>R1</button>
-            <button onclick="guess('R2')" r2>R2</button>
-            <button onclick="guess('R3')" r3>R3</button>
-
+            <button id="L1">L1</button>
+            <button id="L2">L2</button>
+            <button id="L3">L3</button>
+            <button id="M">M</button>
+            <button id="R1">R1</button>
+            <button id="R2">R2</button>
+            <button id="R3">R3</button>
         </div>
-        <br />
-        
     </body>
     <script>
-        const SOUNDS = ["L1", "L2", "L3", "M", "R1", "R2", "R3"]
-        var soundHolder = document.getElementById("soundHolder")
-        for (var s of SOUNDS) {
-            soundHolder.innerHTML += `
-                <audio src="cut/${s}.mp3" id="${s}" preload="auto" />
-            `
-        }
-        function guess(id) {
-            document.getElementById(id).play()
+        for (let s of ["L1", "L2", "L3", "M", "R1", "R2", "R3"]) {
+            let audio = document.createElement('audio');
+            audio.preload = 'auto';
+            audio.src = `cut/${s}.mp3`;
+            document.getElementById(s).addEventListener('click', () => audio.play());
         }
     </script>
 </html>
