Make each oracle button a uniform-size circle.

--- a/index.html
+++ b/index.html
@@ -36,45 +36,54 @@ body, button {
 
 #background > div {
   background: grey;
+  border-radius: 50%;
   cursor: pointer;
-  opacity: .8;
+  height: calc(5 * var(--dim));
+  line-height: calc(5 * var(--dim));
+  opacity: .5;
   padding: calc(.5 * var(--dim));
   position: absolute;
+  text-align: center;
+  width: calc(5 * var(--dim));
+}
+
+#background > div:hover {
+  background: green;
 }
 
 #L1 {
-  left: 26%;
-  top: 68%;
+  left: 24.75%;
+  top: 65.75%;
 }
 
 #L2 {
-  left: 20%;
-  top: 60%;
+  left: 19%;
+  top: 57.5%;
 }
 
 #L3 {
-  left: 35%;
-  top: 26%;
+  left: 33.75%;
+  top: 23.5%;
 }
 
 #M {
-  left: 48.25%;
-  top: 65%;
+  left: 46.75%;
+  top: 62.75%;
 }
 
 #R1 {
-  left: 70%;
-  top: 61%;
+  left: 69%;
+  top: 59%;
 }
 
 #R2 {
-  left: 77%;
-  top: 42%;
+  left: 75.5%;
+  top: 40.5%;
 }
 
 #R3 {
-  left: 63%;
-  top: 29%;
+  left: 62.25%;
+  top: 27%;
 }
 </style>
 
